factor out getting buf into helper function

--- a/src/viam/api/CMakeLists.txt
+++ b/src/viam/api/CMakeLists.txt
@@ -55,49 +55,9 @@ list(JOIN BUF_PROTO_COMPONENTS , BUF_PROTO_COMPONENTS_JOINED)
 
 if (VIAMCPPSDK_USE_DYNAMIC_PROTOS)
 
-  # Look for the `buf` command in the usual places, and use it if
-  # found. If we can't find it, try to download it and use that.
-  #
-  # TODO: File an upstream issue with `buf.build` to add
-  # `find_package` support for it, then use it.
-  #
-  find_program(BUF_COMMAND buf)
-  if (NOT BUF_COMMAND)
+  viamcppsdk_get_buf()
 
-    set(HOST_SYSTEM_PROCESSOR_FOR_BUF_DOWNLOAD ${CMAKE_HOST_SYSTEM_PROCESSOR})
-    if (CMAKE_HOST_WIN32)
-      if (HOST_SYSTEM_PROCESSOR_FOR_BUF_DOWNLOAD STREQUAL "AMD64")
-        set(HOST_SYSTEM_PROCESSOR_FOR_BUF_DOWNLOAD x86_64)
-      elseif (HOST_SYSTEM_PROCESSOR_FOR_BUF_DOWNLOAD STREQUAL "ARM64")
-        set(HOST_SYSTEM_PROCESSOR_FOR_BUF_DOWNLOAD arm64)
-      else()
-        message(FATAL_ERROR "Unknown Windows platform to correct buf download URL: ${HOST_SYSTEM_PROCESSOR_FOR_BUF_DOWNLOAD}")
-      endif()
-    endif()
-
-    set(BUF_DOWNLOAD_URL https://github.com/bufbuild/buf/releases/latest/download/buf-${CMAKE_HOST_SYSTEM_NAME}-${HOST_SYSTEM_PROCESSOR_FOR_BUF_DOWNLOAD}${CMAKE_HOST_EXECUTABLE_SUFFIX})
-
-    message(STATUS "system name ${CMAKE_SYSTEM_NAME} host name ${CMAKE_HOST_SYSTEM_NAME}")
-    message(STATUS "exe suffix ${CMAKE_EXECUTABLE_SUFFIX} host suffix ${CMAKE_HOST_EXECUTABLE_SUFFIX}")
-
-    file(
-      DOWNLOAD
-      ${BUF_DOWNLOAD_URL}
-      ${CMAKE_CURRENT_BINARY_DIR}/buf_latest${CMAKE_HOST_EXECUTABLE_SUFFIX}
-      STATUS buf_status
-    )
-    list(GET buf_status 0 buf_status_code)
-    list(GET buf_status 1 buf_status_string)
-
-    if(NOT buf_status_code EQUAL 0)
-      message(FATAL_ERROR "No local `buf` program found (try setting PATH?) and failed to download: ${buf_status_string} for ${BUF_DOWNLOAD_URL}")
-    endif()
-
-    set(BUF_COMMAND ${CMAKE_CURRENT_BINARY_DIR}/buf_latest${CMAKE_HOST_EXECUTABLE_SUFFIX})
-    file(CHMOD ${BUF_COMMAND} PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE)
-  endif()
-
-  # TODO: IDeally we could just generate to `CMAKE_CURRENT_BINARY_DIR`
+  # TODO: Ideally we could just generate to `CMAKE_CURRENT_BINARY_DIR`
   # and everything would work just fine. However, that directory also
   # has intermediate cmake state in it, so we can't use it as a source
   # for a directory copy to update the static protos, as we do
