--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,7 +76,6 @@ jobs:
       - name: Test examples
         shell: powershell
         run: |
-          tree build
           cd build/install/bin
           ls
-          Start-Job -ScriptBlock { .\simple_module.exe asdf | Select-String -Pattern "Module listening on" } | Wait-Job -Timeout 2 | Receive-Job
+          Start-Job -ScriptBlock { ls; .\simple_module.exe asdf | Select-String -Pattern "Module listening on" } | Wait-Job -Timeout 2 | Receive-Job
