--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,6 +76,4 @@ jobs:
       - name: Test examples
         shell: powershell
         run: |
-          cd build/install/bin
-          ls
-          Start-Job -ScriptBlock { ls; .\simple_module.exe asdf | Select-String -Pattern "Module listening on" } | Wait-Job -Timeout 2 | Receive-Job
+          Start-Job -WorkingDirectory build/install/bin -ScriptBlock { ls; .\simple_module.exe asdf | Select-String -Pattern "Module listening on" } | Wait-Job -Timeout 2 | Receive-Job
