--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -77,5 +77,5 @@ jobs:
         shell: powershell
         run: |
           Start-Job -Init ([ScriptBlock]::Create("Set-Location '$pwd/build/install/bin'")) -ScriptBlock { .\simple_module.exe asdf 2>&1 > output.txt} | Wait-Job -Timeout 2 | Receive-Job
-          if (-not $(Select-String -Pattern "wrong" -Path ./build/install/bin/output.txt)) { throw "Module did not start listening" }
+          if (-not $(Select-String -Pattern "Module listening" -Path ./build/install/bin/output.txt)) { throw "Module did not start listening" }
 
