--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,36 +12,36 @@ on:
         description: set to true to build without clang-tidy (2x faster)
 
 jobs:
-#   test_ubuntu:
-#     if: github.repository_owner == 'viamrobotics'
-#     runs-on: ubuntu-latest
-#     container: ghcr.io/viamrobotics/cpp-base:bullseye-amd64
-#     strategy:
-#       fail-fast: false
-#       matrix:
-#         include:
-#           - BUILD_SHARED: ON
-#           - BUILD_SHARED: OFF
-#     steps:
-#       - uses: actions/checkout@v4
-#       - name: cmake
-#         run: |
-#           mkdir build
-#           cd build
-#           cmake .. -G Ninja \
-#             -DBUILD_SHARED_LIBS=${{ matrix.BUILD_SHARED }} \
-#             -DVIAMCPPSDK_OFFLINE_PROTO_GENERATION=ON \
-#             -DVIAMCPPSDK_BUILD_TESTS=ON \
-#             -DVIAMCPPSDK_BUILD_EXAMPLES=ON \
-#             -DVIAMCPPSDK_CLANG_TIDY=${{ inputs.no-tidy && 'OFF' || 'ON' }} \
-#             -DVIAMCPPSDK_SANITIZED_BUILD=${{ matrix.BUILD_SHARED }}
-#       - name: build
-#         run: |
-#           cmake --build build --target install
-#           cmake --install build
-#       - name: test
-#         working-directory: build
-#         run: ../etc/docker/tests/run_test.sh
+  test_ubuntu:
+    if: github.repository_owner == 'viamrobotics'
+    runs-on: ubuntu-latest
+    container: ghcr.io/viamrobotics/cpp-base:bullseye-amd64
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - BUILD_SHARED: ON
+          - BUILD_SHARED: OFF
+    steps:
+      - uses: actions/checkout@v4
+      - name: cmake
+        run: |
+          mkdir build
+          cd build
+          cmake .. -G Ninja \
+            -DBUILD_SHARED_LIBS=${{ matrix.BUILD_SHARED }} \
+            -DVIAMCPPSDK_OFFLINE_PROTO_GENERATION=ON \
+            -DVIAMCPPSDK_BUILD_TESTS=ON \
+            -DVIAMCPPSDK_BUILD_EXAMPLES=ON \
+            -DVIAMCPPSDK_CLANG_TIDY=${{ inputs.no-tidy && 'OFF' || 'ON' }} \
+            -DVIAMCPPSDK_SANITIZED_BUILD=${{ matrix.BUILD_SHARED }}
+      - name: build
+        run: |
+          cmake --build build --target install
+          cmake --install build
+      - name: test
+        working-directory: build
+        run: ../etc/docker/tests/run_test.sh
   test_windows:
     if: github.repository_owner == 'viamrobotics'
     runs-on: windows-latest
