Update debian bullseye backports url

--- a/etc/docker/base-images/Dockerfile.debian.bullseye
+++ b/etc/docker/base-images/Dockerfile.debian.bullseye
@@ -32,7 +32,7 @@ RUN apt-get -y --no-install-recommends install \
 # Add the public key for the llvm repository
 RUN bash -c 'wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|apt-key add -'
 RUN apt-add-repository -y 'deb http://apt.llvm.org/bullseye/ llvm-toolchain-bullseye-15 main'
-RUN apt-add-repository -y 'deb http://deb.debian.org/debian bullseye-backports main'
+RUN apt-add-repository -y 'deb https://archive.debian.org/debian bullseye-backports main'
 
 RUN apt-get update
 
