--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -20,6 +20,7 @@ jobs:
       # in the release job. Only very cursory effort was made to prune.
       - name: install dependencies
         run: |
+          apt-add-repository -y 'deb https://archive.debian.org/debian bullseye-backports main'
           apt-get update
           apt-get -y dist-upgrade
           DEBIAN_FRONTEND=noninteractive apt-get -y --no-install-recommends install \
