--- a/.github/workflows/update_protos.yml
+++ b/.github/workflows/update_protos.yml
@@ -11,7 +11,7 @@ jobs:
     if: github.repository_owner == 'viamrobotics'
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/viamrobotics/canon:amd64
+      image: ghcr.io/viamrobotics/rdk-devenv:amd64
     steps:
       - uses: actions/checkout@v4
         with:
@@ -20,6 +20,7 @@ jobs:
       # in the release job. Only very cursory effort was made to prune.
       - name: install dependencies
         run: |
+          sudo apt-get install -y software-properties-common
           apt-add-repository -y 'deb https://archive.debian.org/debian bullseye-backports main'
           apt-get update
           apt-get -y dist-upgrade
