--- a/.github/workflows/ai-updater.yml
+++ b/.github/workflows/ai-updater.yml
@@ -3,14 +3,14 @@ name: AI Updater Workflow
 on:
   push:
     branches:
-      - workflow/update-proto
+      - workflow/update-protos
   workflow_dispatch:
 
 jobs:
   call-ai-updater:
     uses: gabegottlob/viam-ai-updater/.github/workflows/ai-updater.yml@main
     with:
-        target_branch: workflow/update-proto
+        target_branch: workflow/update-protos
         sdk: cpp
     secrets:
         GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
