--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -284,6 +284,7 @@ jobs:
       - name: Update CMake for bullseye
         if: ${{ matrix.image  == 'debian:bullseye' }}
         run: |
+          sudo apt-get install -y software-properties-common
           apt-add-repository -y 'deb http://deb.debian.org/debian bullseye-backports main'
 
           apt-get update
