--- a/.github/workflows/conan-publish.yml
+++ b/.github/workflows/conan-publish.yml
@@ -146,7 +146,7 @@ jobs:
         conan upload "viam-cpp-sdk/*" -r viamconan -c
 
     - name: Upload additional deps
-      if: inputs.upload_deps
+      if: inputs.upload_deps && !(matrix.runner == 'buildjet-8vcpu-ubuntu-2204' && matrix.image == 'ubuntu:22.04')
       run: |
         conan upload "boost/*" -r viamconan -c
         conan upload "grpc/*" -r viamconan -c
