error action pref...

--- a/.github/workflows/conan-publish.yml
+++ b/.github/workflows/conan-publish.yml
@@ -167,6 +167,7 @@ jobs:
     - name: Set up python/conan
       shell: powershell
       run: |
+        $ErrorActionPreference = "Stop"
         Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
         refreshenv
 
@@ -184,10 +185,11 @@ jobs:
     - name: Create and upload package
       shell: powershell
       run: |
+        $ErrorActionPreference = "Stop"
         Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
         refreshenv
 
-        conan create . --build=missing -o "&:shared=False" -s compiler.cppstd=17
+        conan create . --build=missing -o "&:shared=False" -s:a compiler.cppstd=17
         conan upload "viam-cpp-sdk/*" -r viamconan -c
       env:
         CONAN_USER_HOME: c:/cache
@@ -197,6 +199,7 @@ jobs:
       if: inputs.upload_deps
       shell: powershell
       run: |
+        $ErrorActionPreference = "Stop"
         Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
         refreshenv
 
