--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -60,6 +60,7 @@ endif()
 
 target_sources(viamsdk
   PRIVATE
+    common/audio.cpp
     common/client_helper.cpp
     common/exception.cpp
     common/instance.cpp
@@ -166,6 +167,7 @@ target_sources(viamsdk
       ../..
       ${CMAKE_CURRENT_BINARY_DIR}/../..
     FILES
+      ../../viam/sdk/common/audio.hpp
       ../../viam/sdk/common/client_helper.hpp
       ../../viam/sdk/common/exception.hpp
       ../../viam/sdk/common/instance.hpp
@@ -177,6 +179,7 @@ target_sources(viamsdk
       ../../viam/sdk/common/version_metadata.hpp
       ../../viam/sdk/common/world_state.hpp
       ../../viam/sdk/components/arm.hpp
+      ../../viam/sdk/components/audio_in.hpp
       ../../viam/sdk/components/base.hpp
       ../../viam/sdk/components/board.hpp
       ../../viam/sdk/components/button.hpp
