RSDK-12151 Audio Out Component Type (#495)

--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -61,6 +61,7 @@ endif()
 target_sources(viamsdk
   PRIVATE
     common/audio.cpp
+    common/audio.cpp
     common/client_helper.cpp
     common/exception.cpp
     common/instance.cpp
@@ -73,6 +74,7 @@ target_sources(viamsdk
     common/private/service_helper.cpp
     components/arm.cpp
     components/audio_in.cpp
+    components/audio_out.cpp
     components/base.cpp
     components/board.cpp
     components/button.cpp
@@ -90,6 +92,8 @@ target_sources(viamsdk
     components/private/arm_server.cpp
     components/private/audio_in_server.cpp
     components/private/audio_in_client.cpp
+    components/private/audio_out_client.cpp
+    components/private/audio_out_server.cpp
     components/private/base_client.cpp
     components/private/base_server.cpp
     components/private/board_client.cpp
@@ -169,6 +173,7 @@ target_sources(viamsdk
     FILES
       ../../viam/sdk/common/audio.hpp
       ../../viam/sdk/common/client_helper.hpp
+      ../../viam/sdk/common/audio.hpp
       ../../viam/sdk/common/exception.hpp
       ../../viam/sdk/common/instance.hpp
       ../../viam/sdk/common/linear_algebra.hpp
@@ -180,6 +185,7 @@ target_sources(viamsdk
       ../../viam/sdk/common/world_state.hpp
       ../../viam/sdk/components/arm.hpp
       ../../viam/sdk/components/audio_in.hpp
+      ../../viam/sdk/components/audio_out.hpp
       ../../viam/sdk/components/base.hpp
       ../../viam/sdk/components/board.hpp
       ../../viam/sdk/components/button.hpp
