--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,6 +56,16 @@ jobs:
               wget \
               zlib1g-dev
 
+          bash -c 'wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key|apt-key add -'
+          apt-add-repository -y 'deb http://apt.llvm.org/bookworm/ llvm-toolchain-bookworm-15 main'
+          apt-get update
+          DEBIAN_FRONTEND=noninteractive apt-get -y --no-install-recommends install -t llvm-toolchain-bookworm-15 \
+            clang-15 \
+            clang-tidy-15 \
+            clang-format
+
+
+
       - name: cmake
         run: |
           mkdir build
