introduce grpc version check macro

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -352,11 +352,11 @@ if (VIAMCPPSDK_BUILD_EXAMPLES)
   set(VIAMCPPSDK_BOOST_PROGRAM_OPTIONS "program_options")
 endif()
 
-find_package(Boost ${VIAMCPPSDK_BOOST_VERSION_MINIMUM} REQUIRED 
-  COMPONENTS 
-    headers 
-    log 
-    log_setup 
+find_package(Boost ${VIAMCPPSDK_BOOST_VERSION_MINIMUM} REQUIRED
+  COMPONENTS
+    headers
+    log
+    log_setup
     ${VIAMCPPSDK_BOOST_PROGRAM_OPTIONS}
     ${VIAMCPPSDK_BOOST_TEST}
 )
@@ -460,6 +460,10 @@ endif()
 
 if (VIAMCPPSDK_GRPCXX_VERSION VERSION_LESS 1.32.0)
   set(VIAMCPPSDK_GRPCXX_LEGACY_FWD 1)
+endif()
+
+if(VIAMCPPSDK_GRPCXX_VERSION VERSION_LESS 1.43.0)
+  set(VIAMCPPSDK_GRPCXX_NO_DIRECT_DIAL 1)
 endif()
 
 include(FetchContent)
