add sdk mesh type

--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -66,6 +66,7 @@ target_sources(viamsdk
     common/exception.cpp
     common/instance.cpp
     common/linear_algebra.cpp
+    common/mesh.cpp
     common/pose.cpp
     common/proto_value.cpp
     common/utils.cpp
@@ -177,6 +178,7 @@ target_sources(viamsdk
       ../../viam/sdk/common/exception.hpp
       ../../viam/sdk/common/instance.hpp
       ../../viam/sdk/common/linear_algebra.hpp
+      ../../viam/sdk/common/mesh.hpp
       ../../viam/sdk/common/pose.hpp
       ../../viam/sdk/common/proto_convert.hpp
       ../../viam/sdk/common/proto_value.hpp
